# ChangeLog for lxqt-base/libsysstat
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxqt-base/libsysstat/ChangeLog,v 1.4 2015/01/30 16:32:20 kensington Exp $

  30 Jan 2015; Michael Palimaka <kensington@gentoo.org> libsysstat-0.1.0.ebuild,
  libsysstat-0.2.0.ebuild:
  Update SRC_URI by Michael Vetter <g.bluehut@gmail.com> wrt bug #537032.

*libsysstat-0.2.0 (08 Nov 2014)

  08 Nov 2014; Jauhien Piatlicki <jauhien@gentoo.org> +libsysstat-0.2.0.ebuild:
  version bump

  29 May 2014; Manuel Rüger <mrueg@gentoo.org> libsysstat-0.1.0.ebuild:
  Add ~arm keyword.

*libsysstat-0.1.0 (26 May 2014)

  26 May 2014; Jauhien Piatlicki <jauhien@gentoo.org> +libsysstat-0.1.0.ebuild,
  +metadata.xml:
  Initial import from the qt overlay, thanks to Harvey Mittens and Davide
  Pesavento, see bug #509946