@@ -1,6 +1,11 @@
 # ChangeLog for lxqt-base/libsysstat
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/lxqt-base/libsysstat/ChangeLog,v 1.4 2015/01/30 16:32:20 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxqt-base/libsysstat/ChangeLog,v 1.5 2015/02/10 14:54:29 yngwin Exp $
+
+*libsysstat-0.3.0 (10 Feb 2015)
+
+  10 Feb 2015; Ben de Groot <yngwin@gentoo.org> +libsysstat-0.3.0.ebuild:
+  version bump
 
   30 Jan 2015; Michael Palimaka <kensington@gentoo.org> libsysstat-0.1.0.ebuild,
   libsysstat-0.2.0.ebuild:
